@@ -1,7 +1,7 @@
 package br.com.fiap.restaurante.infra.mappers;
 
+import br.com.fiap.restaurante.application.output.UsuarioOutput;
 import br.com.fiap.restaurante.infra.database.entities.TipoUsuario;
-import br.com.fiap.restaurante.infra.database.entities.UsuarioEntity;
 import br.com.fiap.restaurante.infra.database.entities.UsuarioPerfil;
 import br.com.fiap.restaurante.infra.dtos.UsuarioDTO;
 import org.mapstruct.Mapper;
@@ -18,22 +18,18 @@ public interface UsuarioDTOMapper {
     UsuarioDTOMapper INSTANCE = Mappers.getMapper(UsuarioDTOMapper.class);
 
     @Mapping(source = "perfis", target = "perfis", qualifiedByName = "mapStringsToUsuarioPerfil")
-    UsuarioDTO toDTO(UsuarioEntity usuarioEntity);
-
-    @Mapping(source = "perfis", target = "perfis", qualifiedByName = "mapUsuarioPerfilToStrings")
-    UsuarioEntity toEntity(UsuarioDTO dto);
+    UsuarioDTO toDTO(UsuarioOutput usuario);
 
 
-
-    @Named("mapUsuarioPerfilToStrings")
-    default List<String> map(List<UsuarioPerfil> perfis) {
+    @Named(value = "mapUsuarioPerfilToStrings")
+    default List<String> mapUsuarioPerfil(List<UsuarioPerfil> perfis) {
         if (perfis == null) return null;
         return perfis.stream()
                 .map(u -> u.getTipoUsuario().name()) // extrai o nome do perfil
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Named("mapStringsToUsuarioPerfil")
+    @Named(value = "mapStringsToUsuarioPerfil")
     default List<UsuarioPerfil> mapStrings(List<String> perfis) {
         if (perfis == null) return null;
         return perfis.stream()
@@ -42,7 +38,7 @@ public interface UsuarioDTOMapper {
                     up.setTipoUsuario(TipoUsuario.valueOf(p));
                     return up;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
